finish reworking christmas cookie recipes

--- a/project_recipes/recipe_styles.css
+++ b/project_recipes/recipe_styles.css
@@ -14,3 +14,12 @@ body {
     color: gray;
     font-size: 22px;
 }
+
+img {
+    height: 250px;
+    width: 275px;
+}
+
+h4 {
+    font-style: italic;
+}
